# wow

./: .gitignore  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: release.yml
Formula/: wow.rb
docs/: auzaar.md  keywords.md  tools.md
examples/: blink.wow  esp32_server.wow  ginti.wow  koshish.wow  pahara.wow  salam.wow  server.wow  shaks.wow
runtime/auzaar/: auzaar.h  auzaar.js  auzaar_arduino.h
runtime/tools/: tools.h  tools.js  tools_arduino.h
src/: ast.rs  checker.rs  lexer.rs  main.rs  parser.rs
src/backends/: arduino.rs  c.rs  mod.rs  node.rs
