[package]
name = "wow"
version = "0.1.0"
edition = "2021"
description = "The wow programming language compiler — Roman Urdu code for every platform"
license = "MIT"
repository = "https://github.com/wow-lang/wow"
readme = "README.md"

[[bin]]
name = "wow"
path = "src/main.rs"

[dependencies]
# Lexer: define tokens as an annotated enum, very fast
logos = "0.14"

# Parser: combinator-based, lets us describe the grammar clearly
chumsky = "0.9"

# Error messages: pointed, coloured, with source spans
ariadne = "0.4"

# CLI: wow build <file> --target <c|arduino|node>
clap = { version = "4", features = ["derive"] }
