[package]
name = "wow"
version = "0.1.4"
edition = "2021"
description = "The wow programming language compiler — Roman Urdu code for every platform"
license = "MIT"
repository = "https://github.com/wow-language/wow"
readme = "README.md"

[[bin]]
name = "wow"
path = "src/main.rs"

[dependencies]
logos = "0.14"
ariadne = "0.4"
clap = { version = "4", features = ["derive"] }
self_update = { version = "0.40", default-features = false, features = [
    "archive-tar",
    "archive-zip",
    "compression-flate2",
    "compression-zip-deflate",
    "rustls",
] }

# Note: the parser is a hand-written recursive-descent parser (see src/parser.rs).
# wow's grammar is newline-significant and reuses keywords (agar/warna also form
# the ternary), which is fiddly in parser combinators. Hand-rolling gives precise
# control over the Roman Urdu error messages, which are the heart of the language.
